[package]
name = "rust_mqtt_client_tui"
version = "0.1.0"
edition = "2021"
description = "An interactive TUI MQTT 3.1.1 client built with Rust and Ratatui"
license = "MIT"
repository = "https://github.com/ffespechen/rust_mqtt_client_tui"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
rumqttc = { version = "0.24", features = ["websocket"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
